--- a/python-server_side_rendering/templates/product_display.html
+++ b/python-server_side_rendering/templates/product_display.html
@@ -5,23 +5,27 @@
     <title>Product Display</title>
 </head>
 <body>
-    <h1>Product Display</h1>
+    <h1>Product List</h1>
     {% if error %}
         <p>{{ error }}</p>
     {% else %}
-        <table border="1">
-            <tr>
-                <th>Name</th>
-                <th>Category</th>
-                <th>Price</th>
-            </tr>
-            {% for product in products %}
+        <table>
+            <thead>
                 <tr>
-                    <td>{{ product.name }}</td>
-                    <td>{{ product.category }}</td>
-                    <td>{{ product.price }}</td>
+                    <th>Name</th>
+                    <th>Category</th>
+                    <th>Price</th>
                 </tr>
-            {% endfor %}
+            </thead>
+            <tbody>
+                {% for product in products %}
+                    <tr>
+                        <td>{{ product.name }}</td>
+                        <td>{{ product.category }}</td>
+                        <td>{{ product.price }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
         </table>
     {% endif %}
 </body>
